--- a/client/tomcatconf/commands.properties.in
+++ b/client/tomcatconf/commands.properties.in
@@ -253,7 +253,7 @@ deleteHost=3
 prepareHostForMaintenance=1
 cancelHostMaintenance=1
 listHosts=3
-listHostsForMigration=1
+findHostsForMigration=1
 addSecondaryStorage=1
 updateHostPassword=1
 
@@ -288,7 +288,7 @@ deleteStoragePool=1
 listClusters=3
 enableStorageMaintenance=1
 cancelStorageMaintenance=1
-listStoragePoolsForMigration=1
+findStoragePoolsForMigration=1
 
 #### security group commands
 createSecurityGroup=15
